--- a/index.html
+++ b/index.html
@@ -71,21 +71,41 @@
         <div class="card-group">
           <div class="card">
             <div class="card-body">
-              <div class="color1 c1">
+              <div class="color1 a1">
                 <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
+                <div class="text-bg text1"></div>
               </div>
-              <div class="color1 c2">
+              <div class="color1 a2">
                 <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
+                <div class="text-bg text2"></div>
               </div>
-              <div class="color1 c3">
+              <div class="color1 a3">
                 <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
+                <div class="text-bg text3"></div>
               </div>
-              <div class="color1 c4">
+              <div class="color1 a4">
                 <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
+                <div class="text-bg text4"></div>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <div class="color1 b1">
+                <div class="bg1"></div>
+                <div class="text-bg text1"></div>
+              </div>
+              <div class="color1 b2">
+                <div class="bg2"></div>
+                <div class="text-bg text2"></div>
+              </div>
+              <div class="color1 b3">
+                <div class="bg3"></div>
+                <div class="text-bg text3"></div>
+              </div>
+              <div class="color1 b4">
+                <div class="bg4"></div>
+                <div class="text-bg text4"></div>
               </div>
             </div>
           </div>
@@ -93,227 +113,42 @@
             <div class="card-body">
               <div class="color1 c1">
                 <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
+                <div class="text-bg text1"></div>
               </div>
               <div class="color1 c2">
                 <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
+                <div class="text-bg text2"></div>
               </div>
               <div class="color1 c3">
                 <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
+                <div class="text-bg text3"></div>
               </div>
               <div class="color1 c4">
                 <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
+                <div class="text-bg text4"></div>
               </div>
             </div>
           </div>
           <div class="card">
             <div class="card-body">
-              <div class="color1 c1">
+              <div class="color1 d1">
                 <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
+                <div class="text-bg text1"></div>
               </div>
-              <div class="color1 c2">
+              <div class="color1 d2">
                 <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
+                <div class="text-bg text2"></div>
               </div>
-              <div class="color1 c3">
+              <div class="color1 d3">
                 <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
+                <div class="text-bg text3"></div>
               </div>
-              <div class="color1 c4">
+              <div class="color1 d4">
                 <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
+                <div class="text-bg text4"></div>
               </div>
             </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card-group">
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card-group">
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <div class="color1 c1">
-                <div class="bg1"></div>
-                <div class="text-bg text1">#E1F0DA</div>
-              </div>
-              <div class="color1 c2">
-                <div class="bg2"></div>
-                <div class="text-bg text2">#E1F0DA</div>
-              </div>
-              <div class="color1 c3">
-                <div class="bg3"></div>
-                <div class="text-bg text3">#E1F0DA</div>
-              </div>
-              <div class="color1 c4">
-                <div class="bg4"></div>
-                <div class="text-bg text4">#E1F0DA</div>
-              </div>
-            </div>
-          </div>
-        </div>
+          </div>    
       </div>
     </div>
     <!-- LEFT -->
