--- a/index.html
+++ b/index.html
@@ -14,36 +14,13 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarTogglerDemo01"
-          aria-controls="navbarTogglerDemo01"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-          <a class="navbar-brand" href="#">
-            <img src="./asset/img/logo.png" alt="" srcset="" />
-            <b><span>C</span>OLOR NIC</b>
-          </a>
-          <form role="search">
-            <input
-              class="form-control me-2"
-              type="search"
-              aria-label="Search"
-              placeholder="Search palette"
-            />
-            <div class="garis-form"></div>
-          </form>
-        </div>
+    <div class="search-container">
+      <div class="con-logo">
+        <img src="./asset/img/logo.png" alt="Logo" class="logo">
+        <h3><b><span>C</span>OLOR NIC</b></h3>
       </div>
-    </nav>
+      <input type="text" placeholder="Search..." class="search-input">
+    </div>
     <!-- NAVBAR -->
 
     <!-- item -->
@@ -68,6 +45,7 @@
         </div>
       </div>
       <div class="right">
+        <!-- 1 -->
         <div class="card-group">
           <div class="card">
             <div class="card-body">
@@ -150,6 +128,172 @@
             </div>
           </div>    
       </div>
+      <!-- 2 -->
+      <div class="card-group">
+        <div class="card">
+          <div class="card-body">
+            <div class="color1 e1">
+              <div class="bg1"></div>
+              <div class="text-bg text1"></div>
+            </div>
+            <div class="color1 e2">
+              <div class="bg2"></div>
+              <div class="text-bg text2"></div>
+            </div>
+            <div class="color1 e3">
+              <div class="bg3"></div>
+              <div class="text-bg text3"></div>
+            </div>
+            <div class="color1 e4">
+              <div class="bg4"></div>
+              <div class="text-bg text4"></div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <div class="color1 f1">
+              <div class="bg1"></div>
+              <div class="text-bg text1"></div>
+            </div>
+            <div class="color1 f2">
+              <div class="bg2"></div>
+              <div class="text-bg text2"></div>
+            </div>
+            <div class="color1 f3">
+              <div class="bg3"></div>
+              <div class="text-bg text3"></div>
+            </div>
+            <div class="color1 f4">
+              <div class="bg4"></div>
+              <div class="text-bg text4"></div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <div class="color1 g1">
+              <div class="bg1"></div>
+              <div class="text-bg text1"></div>
+            </div>
+            <div class="color1 g2">
+              <div class="bg2"></div>
+              <div class="text-bg text2"></div>
+            </div>
+            <div class="color1 g3">
+              <div class="bg3"></div>
+              <div class="text-bg text3"></div>
+            </div>
+            <div class="color1 g4">
+              <div class="bg4"></div>
+              <div class="text-bg text4"></div>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-body">
+            <div class="color1 z1">
+              <div class="bg1"></div>
+              <div class="text-bg text1"></div>
+            </div>
+            <div class="color1 z2">
+              <div class="bg2"></div>
+              <div class="text-bg text2"></div>
+            </div>
+            <div class="color1 z3">
+              <div class="bg3"></div>
+              <div class="text-bg text3"></div>
+            </div>
+            <div class="color1 z4">
+              <div class="bg4"></div>
+              <div class="text-bg text4"></div>
+            </div>
+          </div>
+        </div>    
+    </div>
+    <!-- 3 -->
+    <div class="card-group">
+      <div class="card">
+        <div class="card-body">
+          <div class="color1 i1">
+            <div class="bg1"></div>
+            <div class="text-bg text1"></div>
+          </div>
+          <div class="color1 i2">
+            <div class="bg2"></div>
+            <div class="text-bg text2"></div>
+          </div>
+          <div class="color1 i3">
+            <div class="bg3"></div>
+            <div class="text-bg text3"></div>
+          </div>
+          <div class="color1 i4">
+            <div class="bg4"></div>
+            <div class="text-bg text4"></div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <div class="color1 j1">
+            <div class="bg1"></div>
+            <div class="text-bg text1"></div>
+          </div>
+          <div class="color1 j2">
+            <div class="bg2"></div>
+            <div class="text-bg text2"></div>
+          </div>
+          <div class="color1 j3">
+            <div class="bg3"></div>
+            <div class="text-bg text3"></div>
+          </div>
+          <div class="color1 j4">
+            <div class="bg4"></div>
+            <div class="text-bg text4"></div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <div class="color1 k1">
+            <div class="bg1"></div>
+            <div class="text-bg text1"></div>
+          </div>
+          <div class="color1 k2">
+            <div class="bg2"></div>
+            <div class="text-bg text2"></div>
+          </div>
+          <div class="color1 k3">
+            <div class="bg3"></div>
+            <div class="text-bg text3"></div>
+          </div>
+          <div class="color1 k4">
+            <div class="bg4"></div>
+            <div class="text-bg text4"></div>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="card-body">
+          <div class="color1 l1">
+            <div class="bg1"></div>
+            <div class="text-bg text1"></div>
+          </div>
+          <div class="color1 l2">
+            <div class="bg2"></div>
+            <div class="text-bg text2"></div>
+          </div>
+          <div class="color1 l3">
+            <div class="bg3"></div>
+            <div class="text-bg text3"></div>
+          </div>
+          <div class="color1 l4">
+            <div class="bg4"></div>
+            <div class="text-bg text4"></div>
+          </div>
+        </div>
+      </div>    
+  </div>
     </div>
     <!-- LEFT -->
 
