--- a/index.html
+++ b/index.html
@@ -41,11 +41,12 @@
           </h5>
           <div class="garis-left"></div>
           <div class="item-left">
-            <p><a href="">Light</a></p>
+            <p><a href="" id="light">Light</a></p>
             <p><a href="">Dark</a></p>
           </div>
         </div>
         <div class="right">
+          <div class="color1 a1 color-transition"></div>
           <!-- 1 -->
           <div class="card-con">
             <div class="card">
