--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <body>
       <!-- NAVBAR -->
       <div class="search-container">
+        
         <div class="con-logo">
           <img src="./asset/img/logo.png" alt="Logo" class="logo">
           <h3><b><span>C</span>OLOR NIC</b></h3>
@@ -42,7 +43,7 @@
           <div class="garis-left"></div>
           <div class="item-left">
             <p><a href="" id="light">Light</a></p>
-            <p><a href="">Dark</a></p>
+            <p><a href="" id="dark">Dark</a></p>
           </div>
         </div>
         <div class="right">
@@ -290,7 +291,332 @@
                 <div class="text-bg text4"></div>
               </div>
             </div>
-          </div>    
+          </div>  
+          <!-- 4 -->
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 y1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 y2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 y3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 y4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 n1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 n2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 n3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 n4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 o1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 o2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 o3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 o4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 p1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 p2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 p3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 p4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div> 
+            <!-- 5 -->
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 q1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 q2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 q3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 q4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 r1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 r2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 r3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 r4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 s1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 s2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 s3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 s4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 t1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 t2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 t3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 t4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div> 
+            <!-- 6 -->
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 u1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 u2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 u3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 u4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 w1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 w2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 w3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 w4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 x1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 x2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 x3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 x4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 aa1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 aa2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 aa3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 aa4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div> 
+            <!-- 7 -->
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 ba1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 ba2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 ba3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 ba4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 ca1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 ca2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 ca3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 ca4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 da1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 da2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 da3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 da4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-body">
+                <div class="color1 ea1">
+                  <div class="bg1"></div>
+                  <div class="text-bg text1"></div>
+                </div>
+                <div class="color1 ea2">
+                  <div class="bg2"></div>
+                  <div class="text-bg text2"></div>
+                </div>
+                <div class="color1 ea3">
+                  <div class="bg3"></div>
+                  <div class="text-bg text3"></div>
+                </div>
+                <div class="color1 ea4">
+                  <div class="bg4"></div>
+                  <div class="text-bg text4"></div>
+                </div>
+              </div>
+            </div> 
+            <!-- end -->
         </div>
     </div>
       
